# spider_test

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.rst  conftest.py  docker-compose.yml  fixed_jwt.py  pyproject.toml
config/: routers.py  settings.py  urls.py
spider/: admin.py  services.py
spider/migrations/: 0001_initial.py
spider/models/: __init__.py  category.py  enterprise.py  hood.py  product.py
spider/serializers/: __init__.py  enterprise.py  product.py
spider/tests/: conftest.py  test_spider.py
spider/viewsets/: __init__.py  enterprise.py  product.py
